[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pytube = "^15.0.0"
telegram = "^0.0.1"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
pytelegrambotapi = "^4.29.1"
flask = "^3.1.2"
qrcode = {extras = ["pil"], version = "^8.2"}
yt-dlp = "^2025.12.8"
pillow = "^12.1.0"
python-dotenv = "^1.2.1"
quickjs = "^1.19.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"